--- a/index.html
+++ b/index.html
@@ -222,10 +222,11 @@
                   <label>
                     Тема вопроса
                     <select>
-                      <option>-------------</option>
-                      <option>-------------</option>
-                      <option>-------------</option>
-                      <option>-------------</option>
+                      <option>Ликвидация предприятия</option>
+                      <option>Банкротсво</option>
+                      <option>Налоговый аудит</option>
+                      <option>Консультация с оператором</option>
+                      <option>Другие услуги</option>
                     </select>
                   </label>
                 </div>
